SSR and RDS changes on summary report

--- a/APIDocumentation/summary-report-documentation-en.html
+++ b/APIDocumentation/summary-report-documentation-en.html
@@ -362,10 +362,16 @@
                                     <td><strong>benefit_risk</strong></td>
                                     <td>The Benefit/Risk Assessment and Recommendation text.</td>
                                 </tr>
+
+                                <!
+                                
                                 <tr>
                                     <td><strong>radioisotope</strong></td>
                                     <td>The radioisotope type.</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>summary</strong></td>
                                     <td>The “Summary Basis of Decision” introductory text.</td>
@@ -376,7 +382,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>why_approved</strong></td>
-                                    <td>The reason why it was approved.</td>
+                                    <td>The reason why the product was approved.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>steps_approval</strong></td>
@@ -436,11 +442,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>licence_number</strong></td>
-                                    <td>The ??????.</td>
+                                    <td>The product licence number.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>is_md</strong></td>
-                                    <td>The ??????.</td>
+                                    <td>The product is_md<td>
                                 </tr>
                                 <tr>
                                     <td><strong>din_list</strong></td>
@@ -448,15 +454,15 @@
                                 </tr>
                                 <tr>
                                     <td><strong>post_activity_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product post activity list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>milestone_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product milestone list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>tombstone_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product tombstone list.</td>
                                 </tr>
                             </table>
                             <!--h3-section-start-->
@@ -648,30 +654,37 @@
                                     <td><strong>created_date</strong></td>
                                     <td>The created date.</td>
                                 </tr>
+
+                                <!--
+
                                 <tr>
                                     <td><strong>modified_date</strong></td>
                                     <td>The modified date. ????? yellow comment
                                     </td>
                                 </tr>
+
                                 <tr>
                                     <td><strong>footnotes</strong></td>
                                     <td>A reference number to the footnotes text.</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>din</strong></td>
-                                    <td>The ?????</td>
+                                    <td>The product din.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>is_md</strong></td>
-                                    <td>The ??????.</td>
+                                    <td>The product is_md.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>din_list</strong></td>
-                                    <td>The ?????</td>
+                                    <td>The product din_list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>bullet_list</strong></td>
-                                    <td>The ?????</td>
+                                    <td>The product bull_list.</td>
                                 </tr>
                             </table>
                             <!--h3-section-start-->
