--- a/APIDocumentation/summary-report-documentation-fr.html
+++ b/APIDocumentation/summary-report-documentation-fr.html
@@ -362,10 +362,16 @@
                                     <td><strong>benefit_risk</strong></td>
                                     <td>The Benefit/Risk Assessment and Recommendation text.</td>
                                 </tr>
+
+                                <!--
+
                                 <tr>
                                     <td><strong>radioisotope</strong></td>
                                     <td>The radioisotope type.</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>summary</strong></td>
                                     <td>The “Summary Basis of Decision” introductory text.</td>
@@ -376,7 +382,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>why_approved</strong></td>
-                                    <td>The reason why it was approved.</td>
+                                    <td>The reason why the product was approved.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>steps_approval</strong></td>
@@ -436,11 +442,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>licence_number</strong></td>
-                                    <td>The ??????.</td>
+                                    <td>The product licence number.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>is_md</strong></td>
-                                    <td>The ??????.</td>
+                                    <td>The the product is_md.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>din_list</strong></td>
@@ -448,15 +454,15 @@
                                 </tr>
                                 <tr>
                                     <td><strong>post_activity_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product post activity list</td>
                                 </tr>
                                 <tr>
                                     <td><strong>milestone_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product milestone list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>tombstone_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product tombstone list.</td>
                                 </tr>
                             </table>
                             <!--h3-section-start-->
@@ -585,31 +591,31 @@
                                 </tr>
                                 <tr>
                                     <td><strong>drug_name</strong></td>
-                                    <td>The name of the drug.</td>
+                                    <td>The brand name of the drug.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>contact_name</strong></td>
-                                    <td>The name of the contact.</td>
+                                    <td>The name of the Health Canada contact.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>contact_url</strong></td>
-                                    <td>The URL of the contact.</td>
+                                    <td>The URL of the Health Canada contact.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>medical_ingredient</strong></td>
-                                    <td>The active ingredient.??????</td>
+                                    <td>The active ingredient.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>therapeutic_area</strong></td>
-                                    <td>The Therapeutic area text.</td>
+                                    <td>The Therapeutic area.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>purpose</strong></td>
-                                    <td>The purpose of the submission text.</td>
+                                    <td>The purpose of the submission.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>reason_decision</strong></td>
-                                    <td>The Why was the decision issued text.</td>
+                                    <td>Why was the decision issued.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>decision</strong></td>
@@ -630,7 +636,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>prescription_status</strong></td>
-                                    <td>The prescription status text.</td>
+                                    <td>The prescription status.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>type_submission</strong></td>
@@ -638,11 +644,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>date_filed</strong></td>
-                                    <td>The date filed.</td>
+                                    <td>The date the submission was filed.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>control_number</strong></td>
-                                    <td>The control number.</td>
+                                    <td>The control number for the submission.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>created_date</strong></td>
@@ -802,10 +808,16 @@
                                     <td><strong>link_id</strong></td>
                                     <td>This variable is used to link all of the SSR data together.</td>
                                 </tr>
+
+                                <!--
+
                                 <tr>
                                     <td><strong>review_date </strong></td>
                                     <td>Unused data element ????.</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>drug_name </strong></td>
                                     <td>The name of the drug, Class, or active ingredient.</td>
@@ -870,21 +882,27 @@
                                     <td><strong>created_date</strong></td>
                                     <td>The date the SSR was created.</td>
                                 </tr>
+
+                                <!--
+
                                 <tr>
                                     <td><strong>modified_date</strong></td>
                                     <td>The date the page was modified. ????? yellow comment</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>key_message_list</strong></td>
-                                    <td>The?????</td>
+                                    <td>The product key message list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>footnotes_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product footnotes list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>reference_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product reference list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>use_canada_list</strong></td>
@@ -892,11 +910,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>finding_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product finding list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>conclusion_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product conclusion list.</td>
                                 </tr>
                                 
                             </table>
