French summary-report page changed to match

--- a/APIDocumentation/summary-report-documentation-en.html
+++ b/APIDocumentation/summary-report-documentation-en.html
@@ -363,8 +363,8 @@
                                     <td>The Benefit/Risk Assessment and Recommendation text.</td>
                                 </tr>
 
-                                <!
-                                
+                                <!--
+
                                 <tr>
                                     <td><strong>radioisotope</strong></td>
                                     <td>The radioisotope type.</td>
@@ -446,7 +446,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>is_md</strong></td>
-                                    <td>The product is_md<td>
+                                    <td>The the product is_md.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>din_list</strong></td>
@@ -454,7 +454,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>post_activity_list</strong></td>
-                                    <td>The product post activity list.</td>
+                                    <td>The product post activity list</td>
                                 </tr>
                                 <tr>
                                     <td><strong>milestone_list</strong></td>
@@ -591,31 +591,31 @@
                                 </tr>
                                 <tr>
                                     <td><strong>drug_name</strong></td>
-                                    <td>The name of the drug.</td>
+                                    <td>The brand name of the drug.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>contact_name</strong></td>
-                                    <td>The name of the contact.</td>
+                                    <td>The name of Health Canada the contact.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>contact_url</strong></td>
-                                    <td>The URL of the contact.</td>
+                                    <td>The URL of the Health Canada contact.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>medical_ingredient</strong></td>
-                                    <td>The active ingredient.??????</td>
+                                    <td>The active ingredient.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>therapeutic_area</strong></td>
-                                    <td>The Therapeutic area text.</td>
+                                    <td>The Therapeutic area.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>purpose</strong></td>
-                                    <td>The purpose of the submission text.</td>
+                                    <td>The purpose of the submission.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>reason_decision</strong></td>
-                                    <td>The Why was the decision issued text.</td>
+                                    <td>Why was the decision issued.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>decision</strong></td>
@@ -636,7 +636,7 @@
                                 </tr>
                                 <tr>
                                     <td><strong>prescription_status</strong></td>
-                                    <td>The prescription status text.</td>
+                                    <td>The prescription status.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>type_submission</strong></td>
@@ -644,11 +644,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>date_filed</strong></td>
-                                    <td>The date filed.</td>
+                                    <td>The date the submission filed.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>control_number</strong></td>
-                                    <td>The control number.</td>
+                                    <td>The control number for the submission.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>created_date</strong></td>
@@ -815,10 +815,16 @@
                                     <td><strong>link_id</strong></td>
                                     <td>This variable is used to link all of the SSR data together.</td>
                                 </tr>
+
+                                <!--
+
                                 <tr>
                                     <td><strong>review_date </strong></td>
                                     <td>Unused data element ????.</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>drug_name </strong></td>
                                     <td>The name of the drug, Class, or active ingredient.</td>
@@ -883,21 +889,27 @@
                                     <td><strong>created_date</strong></td>
                                     <td>The date the SSR was created.</td>
                                 </tr>
+
+                                <!--
+
                                 <tr>
                                     <td><strong>modified_date</strong></td>
                                     <td>The date the page was modified. ????? yellow comment</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>key_message_list</strong></td>
-                                    <td>The?????</td>
+                                    <td>The product key message list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>footnotes_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product footnotes list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>reference_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product reference list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>use_canada_list</strong></td>
@@ -905,11 +917,11 @@
                                 </tr>
                                 <tr>
                                     <td><strong>finding_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product finding list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>conclusion_list</strong></td>
-                                    <td>The ?????.</td>
+                                    <td>The product conclusion list.</td>
                                 </tr>
                                 
                             </table>
