--- a/APIDocumentation/summary-report-documentation-fr.html
+++ b/APIDocumentation/summary-report-documentation-fr.html
@@ -654,6 +654,9 @@
                                     <td><strong>created_date</strong></td>
                                     <td>The created date.</td>
                                 </tr>
+
+                                <!--
+
                                 <tr>
                                     <td><strong>modified_date</strong></td>
                                     <td>The modified date. ????? yellow comment
@@ -663,21 +666,24 @@
                                     <td><strong>footnotes</strong></td>
                                     <td>A reference number to the footnotes text.</td>
                                 </tr>
+
+                                -->
+
                                 <tr>
                                     <td><strong>din</strong></td>
-                                    <td>The ?????</td>
+                                    <td>The product din.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>is_md</strong></td>
-                                    <td>The ??????.</td>
+                                    <td>The product is_md.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>din_list</strong></td>
-                                    <td>The ?????</td>
+                                    <td>The product din_list.</td>
                                 </tr>
                                 <tr>
                                     <td><strong>bullet_list</strong></td>
-                                    <td>The ?????</td>
+                                    <td>The product bullet_list.</td>
                                 </tr>
                             </table>
                             <!--h3-section-start-->
