--- a/APIDocumentation/application-fr.html
+++ b/APIDocumentation/application-fr.html
@@ -167,7 +167,7 @@
                 <a href="">Drug and Health Product Register</a>
 
                 <p>
-                    Regulatory Content ...
+                    Summary Reports ...
                 </p>
 
                 <p>
