--- a/APIDocumentation/data-source-fr.html
+++ b/APIDocumentation/data-source-fr.html
@@ -156,8 +156,8 @@
                                 <li><a href="framework-fr.html">Framework</a></li>
                                 <li><a href="architecture-fr.html">Architecture Diagram</a></li>
                                 <li><a href="data-source-fr.html">Data Sources</a></li>
-                                <li><a href="terms-of-service-fr.html">Terms of Service</a></li>
-                                <li><a href="contact-us-fr.html">Contact Us</a></li>
+                                <li><a href="terms-of-service-fr.html">Conditions d'utilisation</a></li>
+                                <li><a href="contact-us-fr.html">Contactez nous</a></li>
                             </ul>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
             <div class="row pagedetails">
                 <div class="col-sm-5 col-xs-12 datemod">
                     <dl id="wb-dtmd">
-                        <dt>Date modified:&#32;</dt>
+                        <dt>date modifiée:&#32;</dt>
                         <dd><time property="dateModified">2016-03-18</time></dd>
                     </dl>
                 </div>
