--- a/APIDocumentation/dpd-documentation-fr.html
+++ b/APIDocumentation/dpd-documentation-fr.html
@@ -117,7 +117,7 @@
                         <li><a href="http://www.cic.gc.ca/english/index.asp">Immigration</a></li>
                         <li><a href="http://travel.gc.ca">Voyage</a></li>
                         <li><a href="http://www.canada.ca/en/services/business/index.html">Entreprises</a></li>
-                        <li><a href="http://www.canada.ca/en/services/benefits/index.html">Benefits</a></li>
+                        <li><a href="http://www.canada.ca/en/services/benefits/index.html">Prestations</a></li>
                         <li><a href="http://healthycanadians.gc.ca/index-eng.php">Sant&eacute;</a></li>
                         <li><a href="http://www.canada.ca/en/services/taxes/index.html">Imp&ocirc;</a></li>
                         <li><a href="http://www.canada.ca/en/services/index.html">Autre services</a></li>
@@ -151,14 +151,14 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index.html">Accueil</a></li>
-                                <li><a href="api-en.html">APIs</a></li>
-                                <li><a href="application-en.html">Applications</a></li>
-                                <li><a href="framework-en.html">Cadre</a></li>
-                                <li><a href="architecture-en.html">Diagramme d'architecture</a></li>
-                                <li><a href="data-source-en.html">Les sources de données</a></li>
-                                <li><a href="terms-of-service-en.html">Conditions d'utilisation</a></li>
-                                <li><a href="contact-us-en.html">Contactez nous</a></li>
+                                <li><a href="index-fr.html">Accueil</a></li>
+                                <li><a href="api-fr.html">APIs</a></li>
+                                <li><a href="application-fr.html">Applications</a></li>
+                                <li><a href="framework-fr.html">Cadre</a></li>
+                                <li><a href="architecture-fr.html">Diagramme d'architecture</a></li>
+                                <li><a href="data-source-fr.html">Les sources de données</a></li>
+                                <li><a href="terms-of-service-fr.html">Conditions d'utilisation</a></li>
+                                <li><a href="contact-us-fr.html">Contactez nous</a></li>
                             </ul>
                         </div>
                     </div>
