--- a/APIDocumentation/contact-us-fr.html
+++ b/APIDocumentation/contact-us-fr.html
@@ -112,14 +112,14 @@
                 <h2>Topics menu</h2>
                 <div class="row">
                     <ul class="list-inline menu">
-                        <li><a href="http://www.esdc.gc.ca/en/jobs/index.page">Jobs</a></li>
+                        <li><a href="http://www.esdc.gc.ca/en/jobs/index.page">Emplois</a></li>
                         <li><a href="http://www.cic.gc.ca/english/index.asp">Immigration</a></li>
-                        <li><a href="http://travel.gc.ca">Travel</a></li>
-                        <li><a href="http://www.canada.ca/en/services/business/index.html">Business</a></li>
-                        <li><a href="http://www.canada.ca/en/services/benefits/index.html">Benefits</a></li>
-                        <li><a href="http://healthycanadians.gc.ca/index-eng.php">Health</a></li>
-                        <li><a href="http://www.canada.ca/en/services/taxes/index.html">Taxes</a></li>
-                        <li><a href="http://www.canada.ca/en/services/index.html">More services</a></li>
+                        <li><a href="http://travel.gc.ca">Voyage</a></li>
+                        <li><a href="http://www.canada.ca/en/services/business/index.html">Entreprises</a></li>
+                        <li><a href="http://www.canada.ca/en/services/benefits/index.html">Prestations</a></li>
+                        <li><a href="http://healthycanadians.gc.ca/index-eng.php">Sant&eacute;</a></li>
+                        <li><a href="http://www.canada.ca/en/services/taxes/index.html">Imp&ocirc;</a></li>
+                        <li><a href="http://www.canada.ca/en/services/index.html">Autre services</a></li>
                     </ul>
                 </div>
             </div>
@@ -150,19 +150,19 @@
                         <h2>Topics menu</h2>
                         <div class="row">
                             <ul class="list-inline menu">
-                                <li><a href="index-fr.html">Home</a></li>
+                                <li><a href="index-fr.html">Accueil</a></li>
                                 <li><a href="api-fr.html">APIs</a></li>
                                 <li><a href="application-fr.html">Applications</a></li>
-                                <li><a href="framework-fr.html">Framework</a></li>
-                                <li><a href="architecture-fr.html">Architecture Diagram</a></li>
-                                <li><a href="data-source-fr.html">Data Sources</a></li>
-                                <li><a href="terms-of-service-fr.html">Terms of Service</a></li>
-                                <li><a href="contact-us-fr.html">Contact Us</a></li>
+                                <li><a href="framework-fr.html">Cadre</a></li>
+                                <li><a href="architecture-fr.html">Diagramme d'architecture</a></li>
+                                <li><a href="data-source-fr.html">Les sources de données</a></li>
+                                <li><a href="terms-of-service-fr.html">Conditions d'utilisation</a></li>
+                                <li><a href="contact-us-fr.html">Contactez nous</a></li>
                             </ul>
                         </div>
                     </div>
                 </nav>
-                <h1 property="name" id="wb-cont">Contact Us</h1>
+                <h1 property="name" id="wb-cont">Contactez nous</h1>
 
                 <p>If you are experiencing any issues with the APIs, please contact :</p>
                 <p>to come</p>
@@ -173,7 +173,7 @@
             <div class="row pagedetails">
                 <div class="col-sm-5 col-xs-12 datemod">
                     <dl id="wb-dtmd">
-                        <dt>Date modified:&#32;</dt>
+                        <dt>date modifiée:&#32;</dt>
                         <dd><time property="dateModified">2016-03-18</time></dd>
                     </dl>
                 </div>
