--- a/APIDocumentation/summary-report-documentation-fr.html
+++ b/APIDocumentation/summary-report-documentation-fr.html
@@ -116,7 +116,7 @@
                         <li><a href="http://www.cic.gc.ca/english/index.asp">Immigration</a></li>
                         <li><a href="http://travel.gc.ca">Voyage</a></li>
                         <li><a href="http://www.canada.ca/en/services/business/index.html">Entreprises</a></li>
-                        <li><a href="http://www.canada.ca/en/services/benefits/index.html">Benefits</a></li>
+                        <li><a href="http://www.canada.ca/en/services/benefits/index.html">Prestations</a></li>
                         <li><a href="http://healthycanadians.gc.ca/index-eng.php">Sant&eacute;</a></li>
                         <li><a href="http://www.canada.ca/en/services/taxes/index.html">Imp&ocirc;</a></li>
                         <li><a href="http://www.canada.ca/en/services/index.html">Autre services</a></li>
