--- a/APIDocumentation/dhpr-dataset-en.html
+++ b/APIDocumentation/dhpr-dataset-en.html
@@ -46,6 +46,7 @@
 </head>
 
 <body vocab="http://schema.org/" typeof="WebPage" class="secondary">
+    <script src="./js/dhpr.js"></script>
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer1' ? '&l=' + l : ''; j.async = true; j.src = '//www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer1', 'GTM-TLGQ9K');</script>
@@ -1147,32 +1148,5 @@
                 <!--[if lt IE 9]>
                 <script src="./distro/4.0.20/wet-boew/js/ie8-wet-boew2.min.js"></script>
                 <![endif]-->
-
-    <script src="./js/jquery.xdomainrequest.min.js"></script>
-    <script>
-        function saveXML(url, elementName) {
-            var filename = elementName + '.xml';
-            if (window.navigator.msSaveBlob) {
-                $.ajax({
-                    url: url,
-                    type: "POST", /* or type:"GET" or type:"PUT" */
-                    dataType: "xml",
-                    data: {
-                    },
-                    success: function (XMLContent) {
-                        window.navigator.msSaveOrOpenBlob(new Blob([XMLContent], { type: "text/xml;" }), filename);
-                    },
-                    error: function (jqXHR, textStatus, errorThrown) {
-                        $("#" + elementName).attr({ 'href': url, 'target': '_blank' });
-                        console.log("jqXHR: " + jqXHR + " Status: " + textStatus + " Error: " + errorThrown);
-                        return;
-                    }
-                });
-            }
-            else {
-                $("#" + elementName).attr({ 'download': filename, 'href': url, 'target': '_blank' });
-            }
-        };
-    </script>
 </body>
 </html>
