Added templated versions of api-en, application-en, architecture-en, contact-us-en, terms-of-service-en, and index-en

--- a/APIDocumentation/framework-en-templateIndex.html
+++ b/APIDocumentation/framework-en-templateIndex.html
@@ -125,11 +125,16 @@
             </div>
 
             <!--    Changes begin here  -->
-
-            <h1 property="name" id="wb-cont">Lorem ipsum</h1>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non porttitor nunc, non bibendum tortor. Duis sagittis orci libero, lacinia tempor libero tincidunt varius. Integer ut tincidunt sem. Integer velit nibh, gravida nec dictum a, molestie et felis. Suspendisse ultrices ullamcorper lectus. Donec pulvinar ipsum ante, porta pharetra dolor finibus et. Sed placerat fermentum ex at sagittis. Phasellus quis urna quis enim auctor tincidunt in at odio.</p>
-           
+            <h1 property="name" id="wb-cont">Framework</h1>
+            <p>
+                The framework used to create the APIs is Microsoft ASP.NET Web API Framework.  ASP.NET Web API is a framework that makes it easy to build RESTful applications that reach a broad range of clients, including browsers and mobile devices.
+            </p>
+            <p>
+                The APIs are exposing data in JSON or XML type format.
+            </p>
+            <p>
+                Most of the data is coming from Oracle 11g database except for one that comes from a PostgreSQL database.  The database are stored in a public DMZ zone and is READ ONLY.  The data is protected A and therefore is available to the general public.
+            </p>
 
             <!-- Changes end here   -->
 
