--- a/APIDocumentation/contact-us-en-templateIndex.html
+++ b/APIDocumentation/contact-us-en-templateIndex.html
@@ -126,10 +126,10 @@
 
             <!--    Changes begin here  -->
 
-            <h1 property="name" id="wb-cont">Lorem ipsum</h1>
+            <h1 property="name" id="wb-cont">Contact Us</h1>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non porttitor nunc, non bibendum tortor. Duis sagittis orci libero, lacinia tempor libero tincidunt varius. Integer ut tincidunt sem. Integer velit nibh, gravida nec dictum a, molestie et felis. Suspendisse ultrices ullamcorper lectus. Donec pulvinar ipsum ante, porta pharetra dolor finibus et. Sed placerat fermentum ex at sagittis. Phasellus quis urna quis enim auctor tincidunt in at odio.</p>
-           
+            <p>If you are experiencing any issues with the APIs, please contact :</p>
+            <p>to come</p>
 
             <!-- Changes end here   -->
 
