--- a/APIDocumentation/index-en-templateIndex.html
+++ b/APIDocumentation/index-en-templateIndex.html
@@ -125,11 +125,10 @@
             </div>
 
             <!--    Changes begin here  -->
+            <h1 property="name" id="wb-cont">Drug &amp; health product register - APIs - Documentation</h1>
 
-            <h1 property="name" id="wb-cont">Lorem ipsum</h1>
+            <p>This web site will contain all the information about the HPFB Web APIs for IP 450.  It will provide information about all the APIs, the application using them and the framework used for creating them.  It will also provide a graphic that will visually explain the environment used to host the API and database servers. </p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec non porttitor nunc, non bibendum tortor. Duis sagittis orci libero, lacinia tempor libero tincidunt varius. Integer ut tincidunt sem. Integer velit nibh, gravida nec dictum a, molestie et felis. Suspendisse ultrices ullamcorper lectus. Donec pulvinar ipsum ante, porta pharetra dolor finibus et. Sed placerat fermentum ex at sagittis. Phasellus quis urna quis enim auctor tincidunt in at odio.</p>
-           
 
             <!-- Changes end here   -->
 
